clusters/k4/kubernetes/apps/security/kanidm/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kaniop
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kaniop
      app.kubernetes.io/name: kaniop
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
